--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,9 @@ body {
 @theme {
     --text-10: 10px;
 }
+
+@layer components {
+    .container {
+        @apply mx-auto flex max-w-screen-xl gap-6 px-6 py-10 sm:gap-8;
+    }
+}
